Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94448

QtWidgets: Some stylesheets explode Designer and the whole linux terminal (recursion crash)

XMLWordPrintable

    • Linux/X11
    • e9cdcc7cb314586aec76b8b9979435f0af963443 (qt/qtbase/dev) 398fe0b6a2d9c6fcddbd8b1a586823a3c3990515 (qt/qtbase/6.2) e7c2904b6d (qt/tqtc-qtbase/5.15) e7c2904b6d (qt/tqtc-qtbase/tqtc/vxworks-5.15.10)

      To reproduce:

      1. Open Designer and create empty widget. Drop a check box widget into it.
      2. Click the main form and modify "styleSheet" property. Set the value to:

      QCheckBox { qproperty-styleSheet: "QCheckBox { qproperty-text: foobar; }"; }
      

      3. Click OK - crash. It also exploded my terminal once and black screen appeared.

      Alternatively, to reproduce it outside of Designer, run the attached example: qtbug94448.zip.

      A side note - if it's possible to style ANY widget property like this (through "qproperty-propertyName"), I see a big security hole for all Qt applications - isn't it?

        1. qtbug94448.zip
          1 kB
          Friedemann Kleint
        2. qtbug94448_stack.txt
          2.46 MB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes