src/widgets/styles/qstylesheetstyle.cpp
@@ -2650,6 +2650,9 @@ void QStyleSheetStyle::setProperties(QWidget *w)
         default: v = decl.d->values.at(0).variant; break;
         }
 
+        if (propertyL1 == "styleSheet" && value == v)
+            continue;
+
         w->setProperty(propertyL1, v);
     }
 }
